# VideoLectureToLectureNotesInPDF

./: CMakeLists.txt  LNArrayOfBlock.h  LNBlock.h  LNFrame.h  LectureNotes.sln  LectureNotes.vcxproj  LectureNotes.vcxproj.filters  README.md  README.txt  engine.cpp  engine.h  init.cpp  init.h  main.cpp  postProcess.cpp  postProcess.h
